tests/baselines/reference/fatarrowfunctionsOptionalArgsErrors2.errors.txt
==== tests/cases/compiler/fatarrowfunctionsOptionalArgsErrors2.ts (17 errors) ====
    var tt1 = (a, (b, c)) => a+b+c;
                          ~~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,23): error TS1005: ';' expected.
               ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,12): error TS2095: Could not find symbol 'a'.
                   ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,16): error TS2095: Could not find symbol 'b'.
                      ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,19): error TS2095: Could not find symbol 'c'.
                             ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,26): error TS2095: Could not find symbol 'a'.
                               ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,28): error TS2095: Could not find symbol 'b'.
                                 ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(1,30): error TS2095: Could not find symbol 'c'.
    var tt2 = ((a), b, c) => a+b+c;
                          ~~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,23): error TS1005: ';' expected.
                ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,13): error TS2095: Could not find symbol 'a'.
                    ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,17): error TS2095: Could not find symbol 'b'.
                       ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,20): error TS2095: Could not find symbol 'c'.
                             ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,26): error TS2095: Could not find symbol 'a'.
                               ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,28): error TS2095: Could not find symbol 'b'.
                                 ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(2,30): error TS2095: Could not find symbol 'c'.
    
    var tt3 = ((a)) => a;
                    ~~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(4,17): error TS1005: ';' expected.
                ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(4,13): error TS2095: Could not find symbol 'a'.
                       ~
!!! fatarrowfunctionsOptionalArgsErrors2.ts(4,20): error TS2095: Could not find symbol 'a'.